--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,10 @@ services:
   app:
     build: .
 
-  nginx:
-    image: nginx:latest
+  caddy:
+    image: caddy:latest
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/cert.pem:/etc/cert.pem
-      - ./nginx/key.pem:/etc/key.pem
+      - ./caddy/Caddyfile:/etc/caddy/Caddyfile
     ports:
       - "80:80"
       - "443:443"
